// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable renders 1`] = `
<div
  className="touchable pointer rounding0 fullWidth"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex="0"
>
  Touchable
</div>
`;

exports[`Touchable sets correct mouse cursor 1`] = `
<div
  className="touchable zoomIn rounding0 fullWidth"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex="0"
>
  Touchable
</div>
`;

exports[`Touchable sets correct rounding 1`] = `
<div
  className="touchable pointer circle fullWidth"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex="0"
>
  Touchable
</div>
`;

exports[`Touchable sets fullHeight correctly 1`] = `
<div
  className="touchable pointer rounding0 fullHeight fullWidth"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex="0"
>
  Touchable
</div>
`;

exports[`Touchable sets fullWidth correctly 1`] = `
<div
  className="touchable pointer rounding0"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex="0"
>
  Touchable
</div>
`;
